--- a/Changes
+++ b/Changes
@@ -1,5 +1,16 @@
 # This file documents the revision history for Perl extension Catalyst.
 
+5.90102 - 2015-10-29
+  - Better warnings when there's an error reading the psgi.input (billmosley++)
+  - Fixed spurious warnings in uri_for when using no arguments (melmothx++ and 
+    paultcochrane++)
+  - Documentation improvements (paultcochrane++)
+  - Improvements to 'search_extra' configuration and tests around using 
+    uri_for as a class method (cngarrison++)
+  - Fix when Path() is set and not geting registered as action (grim8634++)
+  - $c->state is now preserved over actions in a chain, and across begin,
+    auto, ->forward and ->detach.
+
 5.90101 - 2015-09-04
   - Fixed a regression introduced in the last release which caused test
     case failure when using a version of Perl 5.14 or older.
